[package]
name = "serde_url_params"
version = "0.2.0"
authors = ["boxdot <d@zerovolt.org>"]
license = "MIT/Apache-2.0"
description = "URL parameters serialization"
repository = "https://github.com/boxdot/serde-url-params-rs"
keywords = ["serde", "serialization", "url"]
categories = ["encoding"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"

[dependencies]
serde = "1.0.104"
url = "2.1.1"

[dev-dependencies]
serde = { version = "1.0.104", features = ["derive"] }
